--- a/FactoryMethod/FactoryMethod.csproj
+++ b/FactoryMethod/FactoryMethod.csproj
@@ -43,6 +43,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ConcreteCreator.cs" />
+    <Compile Include="Creator.cs" />
+    <Compile Include="IProduct.cs" />
+    <Compile Include="Product.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
